2009-06-22  smeghead <smeghead@users.sourceforge.jp>

    * CSV形式でのダウンロードでは、文字コード変換しないように修正した。(今までは、UTF-8からCP932に変換していた)

2009-06-20  smeghead <smeghead@users.sourceforge.jp>

    * 共有ライブラリのhookのインターフェースの変更。インターフェース用の構造体を本体に依存しない形で再定義した。

2009-06-19  smeghead <smeghead@users.sourceforge.jp>

    * 1.2.7-bataリリース

2009-06-19  smeghead <smeghead@users.sourceforge.jp>

    * プロジェクト用のデータベース作成時に、ファイルアップロードの最大サイズの
      レコードを追加するようにした。

2009-06-17  smeghead <smeghead@users.sourceforge.jp>

    * アップロードできるファイルの最大サイズを変更可能にした。以前のバージョン
      からの移行の場合は、以下のSQLを各サブプロジェクトのデータベースファイル
      に対して実行する必要があります。
    $ cd db
    $ echo "insert into setting(name, value) values ('upload_max_size', 512);" | sqlite3 2.db
    ※2.db 以外にもサブプロジェクト用DBが存在している場合(3.db,
    4.dbなど)は、それぞれのDBに対して同じSQLを実行してください。

2009-06-14  smeghead  <smeghead@smeghead-laptop>

	* 管理ツール側でユーザ定義のスタイルシートを読み込めないバグを修正した。
    * 管理ツールで新しい項目の追加時に、初期に指定できる選択肢の項目数を5から
    10に増やした。
    * 管理ツールの項目の編集時に、javascriptで項目を動的に増やすことができるよ
    うにした。

2009-06-13  smeghead  <smeghead@smeghead-laptop>

	* 基本的なデータ構造に、simple_stringを使うように修正開始。

2009-06-10  smeghead  <smeghead@smeghead-laptop>

	* 日本語によるメール送信処理の作成中

2009-05-31  smeghead  <smeghead@smeghead-laptop>

	* リクエストされたURLを求める処理に問題があったのを修正した。環境変数の
    HTTPSを判定して、nullポインタを示していない場合、SSLとして判定するようにし
    た。

2009-05-18  smeghead <smeghead@users.sourceforge.jp>

    * FreeBSDの場合にも LFLAGS に、-ldl が付いていたため FreeBSD でコンパイル
      に失敗していた。Linuxの場合に、 -ldl を付加するようにMakefileを修正した。

2009-04-24  smeghead <smeghead@users.sourceforge.jp>

    * SSL接続時に、hookスクリプトに渡すホスト名を正しく作れない問題を修正した。

2009-04-18  smeghead <smeghead@users.sourceforge.jp>

    * 利便性のためにトップページのリンクを追加した。

2009-03-20  smeghead <smeghead@users.sourceforge.jp>

    * 設定情報のエクスポートのスクリプトを更新した。
    * トップの管理ツールで、サブプロジェクトのデータベースパスを表示するようにした。

2009-03-19  smeghead <smeghead@users.sourceforge.jp>

    * 1.2.8-bataリリース

2009-03-19  smeghead <smeghead@users.sourceforge.jp>

    * 検索結果のCSV形式でのダウンロードに加えて、HTML形式でダウンロードして
      エクセルで開くリンクを追加した。
