@@ -171,41 +171,41 @@ void create_project_tables(Database* db)
     exec_query(
             db,
             "insert into setting_file(name, file_name, size, mime_type, content)"
-            "values ('user.css', 'user.css', 1498, 'text/css', '"
+            "values ('user.css', 'user.css', 1421, 'text/css', '"
             "@charset \"utf-8\";\n"
             "/* ================================ */\n"
             "/*  チケット一覧の状態の背景色設定  */\n"
             "/* ================================ */\n"
             "/* 新規 */\n"
-            "#ticket_list td.field3-5paw6KaP {\n"
+            "#ticket_list td.field3-1 {\n"
             "        background-color: lightpink !important;\n"
             "}\n"
             "/* 受付済 */\n"
-            "#ticket_list td.field3-5YX5LuY5riI {\n"
+            "#ticket_list td.field3-2 {\n"
             "        background-color: peachpuff !important;\n"
             "}\n"
             "/* 修正済 */\n"
-            "#ticket_list td.field3-5Lu5q2j5riI {\n"
+            "#ticket_list td.field3-3 {\n"
             "        background-color: lightyellow !important;\n"
             "}\n"
             "/* 保留 */\n"
-            "#ticket_list td.field3-5Ld55WZ {\n"
+            "#ticket_list td.field3-4 {\n"
             "        background-color: white !important;\n"
             "}\n"
             "/* 完了 */\n"
-            "#ticket_list td.field3-5a6M5LqG {\n"
+            "#ticket_list td.field3-5 {\n"
             "        background-color: lightcyan !important;\n"
             "}\n"
             "/* 破棄 */\n"
-            "#ticket_list td.field3-56C05qOE {\n"
+            "#ticket_list td.field3-6 {\n"
             "        background-color: #ccc !important;\n"
             "}\n"
             "/* 対応せず */\n"
-            "#ticket_list td.field3-5a5bc44Gb44Ga {\n"
+            "#ticket_list td.field3-7 {\n"
             "        background-color: #ccc !important;\n"
             "}\n"
             "/* 仕様通り */\n"
-            "#ticket_list td.field3-5LuV5qeY6YCa44KK {\n"
+            "#ticket_list td.field3-8 {\n"
             "        background-color: #eee !important;\n"
             "}\n"
             "\n"
@@ -213,19 +213,19 @@ void create_project_tables(Database* db)
             "/*  チケット一覧の優先度の背景色設定  */\n"
             "/* ================================== */\n"
             "/* 緊急 */\n"
-            "#ticket_list td.field5-57eK5oCl {\n"
+            "#ticket_list td.field5-11 {\n"
             "        background-color: #FF8A8C !important;\n"
             "}\n"
             "/* 高 */\n"
-            "#ticket_list td.field5-6auY {\n"
+            "#ticket_list td.field5-12 {\n"
             "        background-color: #FFCB8C !important;\n"
             "}\n"
             "/* 中 */\n"
-            "#ticket_list td.field5-5Lit {\n"
+            "#ticket_list td.field5-13 {\n"
             "        background-color: #FFFF94 !important;\n"
             "}\n"
             "/* 低 */\n"
-            "#ticket_list td.field5-5L2O {\n"
+            "#ticket_list td.field5-14 {\n"
             "        background-color: white !important;\n"
             "}\n"
             "\n"
